--- a/wonhopark/app/src/main/res/values/colors.xml
+++ b/wonhopark/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="colorRateMovie">#ffb300</color>
+    <color name="colorVoteCount">#ff4081</color>
 </resources>
